# EN605.617.kphill55

./: .gitmodules
module10/: HelloWorld.cl  Makefile  assignment.cc
module11/: Makefile  assignment.cc  assignment.h  declaration.b64  output.txt  zeros.b64
module12/: Makefile  assignment.cc  simple.cl
module6/: assignment.cu  assignment.h
module7/: Makefile  assignment.cu  assignment.h
module8/: Makefile  assignment.cu  assignment.h
module9/: Makefile  assignment.cu  assignment.h  test.c
project/: .gitignore  CMakeLists.txt  README.md  capture_pictures.sh  forecast.sh  run.sh
project/cmake/: FindThrust.cmake
project/examples/: thrust_accumulate_example.cc
project/include/: CMakeLists.txt  camera_utils.h  weather_forecast.h
project/src/: CMakeLists.txt  generate_cache.cc  generate_features.cc  take_picture.cc  weather_forecast.cc  weather_forecast_kernels.cu  weather_forecast_main.cc
project/tests/: CMakeLists.txt  README.md  test_forecast.cc
